# syndio_backend_test

./: .gitignore  .pre-commit-config.yaml  404.html  LICENSE  Procfile  README.md  index.html  mkdocs.yaml  pyproject.toml  setup.cfg  tox.ini
.github/workflows/: main.yaml
docs/_scripts/: gen_stubs.py
reference/: __init__.html  __main__.html  api.html  index.html  main.html  sql.html
search/: search_index.json
src/syndio_backend_test/: __main__.py  api.py  main.py  sql.py
tests/: test_0.py
