[metadata]
name = syndio_backend_test
description = Demo an API with data read from a sqlite.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/xsc27/syndio_backend_test
author = Carlos Meza
author_email = hire@carlos.meza.com
license = Apache-2.0
license_file = LICENSE
classifiers =
    Development Status :: 3 - Alpha
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
keywords =
    xsc27
    digitalr00ts
project_url =
    Source = https://github.com/xsc27/syndio_backend_test
    Tracker = https://github.com/xsc27/syndio_backend_test/issues

[options]
packages = find:
install_requires =
    fastapi
    httpx[http2,brotli]
    uvicorn
python_requires = >=3.8
package_dir =
    = src
zip_safe = False

[options.packages.find]
where = src

[options.extras_require]
docs =
    mkdocs-autorefs
    mkdocs-exclude
    mkdocs-gen-files
    mkdocs-material
    mkdocs-section-index
    mkdocstrings
lint =
    dlint
    flake8-bandit
    flake8-bugbear
    flake8-comprehensions
    flake8-debugger
    flake8-docstrings
    flake8-eradicate
    flake8-isort
    flake8-pytest-style
    flake8-rst-docstrings
    flakehell
    mccabe
    pep8-naming
    pycodestyle
    pydocstyle[toml]
    pyflakes
    pylint
test =
    coverage[toml]
    pytest
    pytest-cov
    requests
    uvicorn[standard]
